<resources>
    <string name="app_name">Sleepherd</string>

    <!-- Main Activity/Fragment -->
    <string name="empty_view_text">Press the Floating Action Button to add a sleep routine.</string>

    <!-- Edit Alarm Activity/Fragment -->
    <string name="time">Time</string>
    <string name="sleep_time">Sleep</string>
    <string name="wake_time">Wake</string>

    <string name="settings">Settings</string>

    <string name="gradual_wakeup_light">Gradual wake-up light</string>
    <string name="filter_blue_light">Filter blue light</string>
    <string name="block_distracting_apps">Block distracting apps</string>

    <string name="label">Label</string>
    <string name="days">Days</string>

    <string name="blockapp">Block App</string>

    <string name="edit_alarm">Edit Alarm</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="add_label_hint">Add a note for this one.</string>
    <string name="update_complete">Changes Saved</string>
    <string name="update_failed">Update Failed</string>
    <string name="delete_complete">Alarm Deleted</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_dialog_title">Confirm Delete Alarm</string>
    <string name="delete_dialog_content">Are you sure you would like to delete this alarm?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--test sample apps-->
    <string name="facebook">Facebook</string>
    <string name="messenger">Messenger</string>
    <string name="whatsapp">Whatsapp</string>


    <!-- Edit Alarm Menu -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Alarm Landing Page Activity/Fragment -->
    <string name="launch_main_activity">Launch Main Activity</string>
    <string name="dismiss">Dismiss</string>

    <!-- Days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

</resources>
